# LLMToolForge

./: .gitignore  AGENTS.md  JSON_DIAGRAM_IMPLEMENTATION.md  QUICK_START.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/hooks/: trellis.json
.github/workflows/: ci.yml  release.yml
.trellis/: .template-hashes.json  workflow.md
.trellis/spec/frontend/: agent-chat-provider-contracts.md  component-guidelines.md  index.md  playground-provider-contracts.md  skill-management-contracts.md  state-management.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-23-playground-chatbot-sqlite/: task.json
.trellis/tasks/06-23-playground-provider-model-icons/: task.json
.trellis/tasks/06-25-skill-management/: design.md  implement.md  prd.md  task.json
.trellis/tasks/06-26-skill-management-redesign/: design.md  implement.md  prd.md  task.json
docs/unified-api/: openapi.json
openwiki/: .last-update.json  index.md  quickstart.md
openwiki/agent/: index.md  overview.md
openwiki/architecture/: index.md  overview.md
openwiki/development/: index.md  overview.md
openwiki/infrastructure/: index.md  overview.md
openwiki/integrations/: index.md  overview.md
openwiki/providers/: index.md  overview.md
platform/: .gitignore  README.md
platform/create-agent/: README.md  package.json
platform/examples/: e2e-harness.mjs  mock-gateway.mjs
platform/node/: package.json
platform/python/: pyproject.toml
platform/python/examples/langgraph_agent/: agent.json  main.py  pyproject.toml
platform/python/examples/langgraph_agent/langgraph_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
platform/python/llmtoolforge_agent/: __init__.py  model.py  runtime.py
platform/python/llmtoolforge_agent/adapters/: __init__.py  langchain.py
platform/python/tests/: test_runtime.py
platform/python/tests/fixtures/: canned_agent.py  host_tool_agent.py  image_agent.py
scripts/: clean.sh  set-version.sh
sidecar/: README.md  build.ts
sidecar/connector/: UPSTREAM.json  build.ts  package.json
sidecar/gateway/: NOTICE.md  README.md  build.ts  package.json
sidecar/portkey/: package.json
sidecar/research-harness/: .gitignore  Makefile  README.md  VENDORED.md  pyproject.toml
sidecar/wrapper/: anthropic.ts  config.ts  gateway.ts  logging.ts  openapi.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  config_io.rs  lib.rs  main.rs  preview.rs  proc_env.rs  tray.rs  web_fetch.rs  web_fetch_render.rs  web_search.rs
src-tauri/src/agent_host/: install.rs  mod.rs
src-tauri/src/connector/: mod.rs
src-tauri/src/data_tools/: artifact.rs  mod.rs
src-tauri/src/fs_tools/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/ssh/: config.rs  mod.rs  session.rs  vault.rs
src-tauri/src/storage/: backend.rs  crypto.rs  mod.rs  s3.rs
src-tauri/src/unified/: anthropic.rs  http.rs  mod.rs  openai.rs  openapi.rs
src/components/: UpdatePrompt.tsx
src/data/: chatRepository.ts  repositories.ts  repository.ts  storage.ts
src/i18n/: config.ts
src/lib/: browser.ts  deviceConfig.ts  disable-autocapitalize.ts  http.ts  markdownTool.ts  mcpInspector.ts  modelConfigIo.ts  preview.ts  reportExport.ts  routes.ts  skillBins.ts  skillSync.ts  skillTargets.ts  textEditorTool.ts  tools.ts  translateTool.ts  unifiedApi.ts  useSuppressBrowser.ts  useUpdater.ts  utils.ts
src/pages/: DashboardPage.tsx  SettingsPage.tsx
src/store/: appMode.ts  builtinMcp.ts  chat.ts  connector.ts  createCollectionStore.ts  debug.ts  deviceConfig.ts  index.ts  locale.ts  marketSettings.ts  messageActions.ts  preview.ts  sessionGroups.ts  sidebar.ts  sshSessions.ts  sync.ts  theme.ts  unified.ts
src/types/: chat.ts  index.ts
(+276 files in other folders)
