[package]
name = "llmtoolforge"
version = "0.1.0"
description = "LLM tool management desktop app"
authors = ["LLMToolForge"]
edition = "2021"

[lib]
name = "llmtoolforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
