[package]
name = "llmtoolforge"
version = "0.1.0"
description = "LLM tool management desktop app"
authors = ["LLMToolForge"]
edition = "2021"

[lib]
name = "llmtoolforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["process", "time", "macros", "rt-multi-thread", "net", "sync", "io-util"] }
wait-timeout = "0.2"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
duckdb = { version = "1.10504.0", features = ["bundled", "json", "parquet"] }
