[package]
name = "llmtoolforge"
version = "0.1.0"
description = "LLM tool management desktop app"
authors = ["LLMToolForge"]
edition = "2021"

[lib]
name = "llmtoolforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["process", "time", "macros", "rt-multi-thread", "net", "sync", "io-util"] }
wait-timeout = "0.2"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
scraper = "0.21"
ego-tree = "0.9"
duckdb = { version = "1.10504.0", features = ["bundled", "json", "parquet"] }
# Storage sync: S3 (and S3-compatible) backend + client-side encryption.
# Use static AK/SK creds (no aws-config) and force a rustls-ring TLS stack so we
# never pull aws-lc-sys (which would require NASM/cmake on Windows CI).
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "http-1x"] }
aws-smithy-http-client = { version = "1", default-features = false, features = ["rustls-ring"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
