[project]
name = "llmtoolforge-agent"
version = "0.1.0"
description = "Python SDK for building LLMToolForge external agents (Agent Adapter Protocol)."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.3", "langchain-openai>=0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmtoolforge_agent"]
